--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [tool:pytest]
 norecursedirs = venv
-addopts = --verbose --cov flintrock --cov-report html
+addopts = --verbose --cov flintrock --cov-report html -rs
 
 [flake8]
 max-line-length = 100
