[DMP-402]fix: remove packages from spark-defaults.conf

--- a/flintrock/templates/spark/conf/spark-defaults.conf
+++ b/flintrock/templates/spark/conf/spark-defaults.conf
@@ -1,1 +1,1 @@
-spark.jars.packages    org.apache.hadoop:hadoop-aws:{hadoop_version}
+# spark.jars.packages    org.apache.hadoop:hadoop-aws:{hadoop_version}
