Add Python 3.7 to Travis CI build (#258)
* include py3.7 via matrix option
* fix xfail condition for test that flakes on Travis
* remove unused import

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+# Work-around for Python 3.7 on Travis CI pulled from here:
+# https://github.com/travis-ci/travis-ci/issues/9815#issue-336465122
+matrix:
+  include:
+    - python: "3.7"
+      dist: "xenial"
+      sudo: true
 install:
   - "pip install -r requirements/developer.pip"
 script:
