Pin setuptools version in Travis build (#314)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ matrix:
       sudo: true
 install:
   - "pip install -r requirements/maintainer.pip"
+  # Fix for PyInstaller: https://stackoverflow.com/q/61574984/
+  - "pip install setuptools==49.2.1"
 script:
   - "pytest"
 addons:
