--- a/flintrock/config.yaml.template
+++ b/flintrock/config.yaml.template
@@ -28,37 +28,37 @@ providers:
     key-name: key_name
     identity-file: /path/to/key.pem
     instance-type: m5.large
-    region: us-east-1
-    # availability-zone: <name>
-    ami: ami-0588935a949f9ff17  # Amazon Linux 2, us-east-1
+    region: eu-west-1
+    availability-zone: eu-west-1b
+    ami: ami-094b5e6f0300fc0ac  # Amazon Linux 2, us-east-1
     user: ec2-user
-    # ami: ami-61bbf104  # CentOS 7, us-east-1
-    # user: centos
-    # spot-price: <price>
-    # vpc-id: <id>
-    # subnet-id: <id>
+    spot-price: 0.1
+    # spot-request-duration: 7d  # duration a spot request is valid, supports d/h/m/s (e.g. 4d 3h 2m 1s)
+    vpc-id: vpc-d39be2b7
+    subnet-id: subnet-db2422bc
     # placement-group: <name>
     # security-groups:
     #   - group-name1
     #   - group-name2
-    # instance-profile-name:
-    # tags:
+    instance-profile-name: spark.dev
+    tags:
+        - PROJECT,TEST
     #   - key1,value1
     #   - key2, value2  # leading/trailing spaces are trimmed
     #   - key3,  # value will be empty
-    # min-root-ebs-size-gb: <size-gb>
+    min-root-ebs-size-gb: 10
     tenancy: default  # default | dedicated
     ebs-optimized: no  # yes | no
     instance-initiated-shutdown-behavior: terminate  # terminate | stop
     # user-data: /path/to/userdata/script
-    # authorize-access-from:
-    #   - 10.0.0.42/32
-    #   - sg-xyz4654564xyz
+    authorize-access-from:
+      - 10.0.0.0/8
+      - 172.0.0.0/8
 
 launch:
   num-slaves: 1
-  # install-hdfs: True
-  # install-spark: False
-  # java-version: 8
+  install-hdfs: True
+  install-spark: True
+  java-version: 8
 
 debug: false
